ADD FINAL PROJECT

--- a/index.html
+++ b/index.html
@@ -1,9 +1,81 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>foobar</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<title>The Gotham Times - Breaking News</title>
+		<link rel="stylesheet" href="gotham.css">
 	</head>
 	<body>
-		<div>foobar</div>
+		<header> The Gotham Times </header>
+		
+		<div id="menu">
+		<table id="table_menu">
+
+			<tr>
+				
+				<td> <a href="index.html">Home</a></td>
+				<td> <a href="https://batman.fandom.com/wiki/Batman">The Batman</a></td>
+				<td> <a href="https://batman.fandom.com/wiki/Gotham_City">Gotham City</a></td>
+				<td ><a href="https://batman.fandom.com/wiki/The_Joker">The Joker</a></td>
+			</tr>
+
+		</table>
+			
+	</div>
+		<div class="alert alert-danger" role="alert" id="alert">
+			Gotham City Police Alert : The Joker is in Town !
+		  </div>
+	</div>
+		<div class="container">
+		<div class="row">
+		  <a href="article1.html"><div class="col-lg-4">
+			
+			<h3>
+				City At War Batman Saves Entire Family 
+			
+			</h3>
+			<ul>
+				<li><p>Gotham streets turned into vicious scenes of urban carnage yesterday as rival gangs fought for dominance in the post-Carmine Falcone era.</p></li>
+				<li><p> Maroni's men lashed out against both the Chechens and Gambol's organization. The Chechen outfit was hit deep in Chinatown at the New Paradise during lunch hour.</p></li>
+			</ul>
+		</a>
+		  </div>
+		  <a href="article2.html">
+		  <div class="col-lg-5">
+			<h3>Harvey Dent joins race for Gotham DA</h3>
+			<p><img src="img/dent.jpg" alt="Harvey Dent" width="100%" height="60%"> </p>
+			<p>Assistant District Attorney Harvey Dent, taking advantage of political momentum after his initial prosecutions of corrupt GPD officers, announced his candidacy for Gotham DA at the infamous Krol Projects in crime-ridden East End. </p>
+		</a>
+		</div><a href="article3.html">
+		  <div class="col">
+			<h4>Shut down Arkham Asylum</h4>
+
+<p>After the latest Arkham Asylum mishap — when 9 inmates simply walked out of the compound in guard uniforms and killed 4 citizens in their first 24 hours free — it's time to rethink Gotham's strategy for housing the criminally insane. </p>
+<p> And the first step in that rethink must be to close the notoriously incompetent, brutal, and corrupt Arkam Asylum. Indeed, with the kind of history Arkham has, one would have to be criminally insane to believe that this infamous Gotham institution will ever reform itself. </p>		 
+</a></div>
+		</div>
+		<div class="row">
+		<div class="col-lg">
+			<h2>Gotham Tonight :</h2>
+			<div class="video-responsive">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/V53nZwpARKQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>		
+		</div>
+		</div>
+		<div class="col-lg"><h2>Photos of the week :</h2>
+			<p><img src="img/gotham.jpeg" alt="Harvey Dent" width="100%" height="80%"> </p>
+
+		</div>
+
+
+		</div>
+	</div>
+
+	<footer> 
+		<p><h6 id="footer-h6">The Gotham Times</h6><h6>Copyright 2020</h6></p>
+	</footer>
+
+		
+		
 	</body>
 </html>
